[package]
name = "trap2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
async-channel = "1.9.0"
cbc = {version = "0.1.2", features = ["block-padding"]}
cfb-mode = "0.8.2"
clap = { version = "4.4.6", features = ["derive"] }
config = { version = "0.13.3", features = ["yaml"] }
des = "0.8.1"
hmac = {version = "0.12.1", features = ["reset"]}
log = { version = "0.4.20", features = ["serde", "kv_unstable"] }
md-5 = "0.10.6"
num_cpus = "1.16.0"
rasn = "0.10.5"
rasn-mib = "0.10.5"
rasn-smi = "0.10.5"
rasn-snmp = "0.10.5"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde-enum-str = "0.4.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
structured-logger = "1.0.3"
tokio = { version = "1.33.0", features = ["full"] }
