[package]
name = "trap2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
async-channel = "2.0.0"
cbc = { version = "0.1.2", features = ["block-padding"] }
cfb-mode = "0.8.2"
clap = { version = "4.4.7", features = ["derive"] }
des = "0.8.1"
hex = { version = "0.4.3", features = ["serde"] }
hmac = { version = "0.12.1", features = ["reset"] }
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["serde", "kv_unstable"] }
md-5 = "0.10.6"
moka = { version = "0.12.1", features = ["sync"] }
num_cpus = "1.16.0"
num-traits = "0.2.17"
rasn = "0.11.0"
rasn-mib = "0.11.0"
rasn-smi = "0.11.0"
rasn-snmp = "0.11.0"
rayon = "1.8.0"
serde = { version = "1.0.190", features = ["derive"] }
serde-enum-str = "0.4.0"
serde_yaml = "0.9.27"
sha1 = "0.10.6"
sha2 = "0.10.8"
simple_logger = { version = "4.2.0", features = ["stderr"] }
structured-logger = "1.0.3"
tokio = { version = "1.33.0", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
